test/k8/17.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nginx-deployment
  namespace: ggckad-s4
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.7.9
