test/k8/9.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: question-nine-pod
  name: question-nine-pod
spec:
  serviceAccountName: automated-access
  containers:
  - image: nginx
    name: question-nine-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
