test/k8/q1.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: pod-a
  name: pod-a
spec:
  containers:
  - image: kubegoldenguide/simple-http-server
    name: pod-a
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
