test/k8/q2.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    question: two
  annotations:
    method: "Docker build"
  name: q2
spec:
  containers:
  - image: kubegoldenguide/alpine-spin:ggckad-question-two
    name: q2
    resources: {}
#    imagePullPolicy: IfNotPresent
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
